--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     height: 100%;
 }
 
+body {
+    background-color: #090812;
+}
+
 @font-face {
     font-family: 'Plus Jakarta Display';
     font-display: swap;
@@ -282,11 +286,6 @@ button:hover {
     top: 0;
 }
 
-.about-us .swiper-slide {
-    min-height: 485px;
-    height: 100%;
-}
-
 .about-us .slide__title {
     font-family: 'HeliosExtC';
     font-size: 45px;
@@ -302,9 +301,11 @@ button:hover {
     font-size: 20px;
     font-weight: 400;
     line-height: 160%;
+    padding-bottom: 132px;
 }
 
-.about-us .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal  {
+.about-us .swiper-scrollbar,
+.swiper-scrollbar.swiper-scrollbar-horizontal {
     left: 26px;
     bottom: 55px;
     max-width: 406px;
@@ -312,7 +313,7 @@ button:hover {
     background-color: #FFF;
 }
 
-.about-us .swiper-scrollbar::before{
+.about-us .swiper-scrollbar::before {
     content: '';
     position: absolute;
     width: 31px;
@@ -325,7 +326,7 @@ button:hover {
     top: -14px;
 }
 
-.about-us .swiper-scrollbar-drag{
+.about-us .swiper-scrollbar-drag {
     background-color: #7F5CFF;
     height: 5px;
     top: -2px;
@@ -343,13 +344,11 @@ button:hover {
     text-transform: uppercase;
     margin-top: 2px;
 }
-.chaptaer-current{
+
+.about-us__img {
     display: none;
 }
 
-.chaptaer-current.active{
-    display: block;
-}
 /*АДАПТИВЫ*/
 @media (max-width: 1024px) {
     .burger {
@@ -387,7 +386,7 @@ button:hover {
 
     .home {
         padding-top: 212px;
-        padding-bottom: 212px;
+        padding-bottom: 237px;
     }
 }
 
@@ -421,6 +420,58 @@ button:hover {
     button {
         font-size: 16px;
     }
+
+    .home__content::before {
+        left: 4px;
+    }
+
+    .about-us {
+        background: none;
+        padding-top: 0;
+    }
+
+    .about-us__img {
+        display: block;
+        width: 100%;
+        height: 384px;
+        margin-bottom: 59px;
+    }
+
+    .about-us__img img {
+        object-fit: cover;
+        object-position: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .about-us .slide__title {
+        font-size: 28px;
+        line-height: 109%;
+        margin-bottom: 52px;
+    }
+
+    .about-us .slide__info {
+        font-size: 16px;
+        padding-bottom: 95px;
+    }
+
+    .about-us__content {
+        padding: 15px 12px 0px 37px;
+    }
+
+    .about-us__content::before {
+        left: 7px;
+    }
+
+    .about-us .swiper-pagination-fraction {
+        font-size: 16px;
+        letter-spacing: 1.15px;
+        bottom: 10px;
+    }
+}
+
+@media (max-width:600px) {
+
 }
 
 
