--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@ button:hover {
     width: 50px;
     height: 50px;
     background-color: rgba(255, 255, 255);
+    box-shadow: 0px 0px 10px 5px white;
     opacity: 0.72;
     border-radius: 50%;
     z-index: 5;
@@ -686,6 +687,98 @@ button:hover {
     100% {
         transform: scale(0.9, 0.9);
     }
+}
+
+.our-brands {
+    background: linear-gradient(180deg, rgba(36, 10, 92, 0.63) 8.97%, rgba(36, 11, 88, 0.30) 100%);
+    backdrop-filter: blur(150px);
+    padding-top: 115px;
+}
+
+.our-brands__head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 7px;
+}
+
+.our-brands__cards {
+    display: flex;
+    justify-content: center;
+    padding-top: 65px;
+    gap: 105px;
+}
+
+.card {
+    max-width: 385px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card__img {
+    height: 401px;
+    margin-bottom: 65px;
+}
+
+.card__info {
+    position: relative;
+    padding-top: 50px;
+}
+
+.card__info::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 6px;
+    border-radius: 48px;
+    box-shadow: 0px 0px 4px 0px rgba(56, 219, 255, 0.50);
+    top: 0;
+    left: 0;
+}
+
+.card__info::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 202px;
+    border-radius: 1px;
+    background: linear-gradient(180deg, rgba(56, 219, 255, 0.14) 0.58%, rgba(56, 219, 255, 0.00) 42.57%);
+    top: 0;
+    left: 0;
+}
+
+.card__info.first::before {
+    background: #06D6DF;
+}
+
+.card__info.second::before {
+    background: #7B71EE;
+}
+
+.card__info.third::before {
+    background: #F00AFE;
+}
+
+.card__name {
+    text-align: center;
+    font-family: 'HeliosExtC';
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 140%;
+    text-transform: uppercase;
+    height: 40px;
+    margin-bottom: 15px;
+}
+
+.card__about {
+    text-align: center;
+    font-family: 'Plus Jakarta Display';
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 160%;
+    letter-spacing: 0.18px;
+    opacity: 0.6;
 }
 
 /*АДАПТИВЫ*/
