--- a/style.css
+++ b/style.css
@@ -1198,6 +1198,7 @@ button:hover {
         flex-direction: column;
         gap: 40px;
         margin-top: 0;
+        overflow: auto;
     }
 
     .home {
