--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ button:hover {
 }
 
 .about-us {
-    background-image: url('img/about-us-bg.jpg');
+    background-image: url('img/about-us-bg.webp'), url('img/about-us-bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -322,7 +322,7 @@ button:hover {
     position: absolute;
     width: 31px;
     height: 31px;
-    background-image: url(img/point.svg);
+    background-image: url('img/point.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -942,7 +942,7 @@ button:hover {
 }
 
 .points-resources {
-    background-image: url('img/our-resources.png');
+    background-image: url('img/our-resources.webp'),url('img/our-resources.png');
     min-width: 735px;
     max-width: 735px;
     width: 100%;
@@ -1184,7 +1184,7 @@ button:hover {
         z-index: 50;
         overflow-y: auto;
         padding: 140px 20px 20px;
-        background-image: url('img/home-bg.jpg');
+        background-image: url('img/home-bg.webp'), url('img/home-bg.jpg');
         background-position: left;
         background-size: cover;
         animation: burgerAnimation 0.4s;
@@ -1553,7 +1553,7 @@ button:hover {
     }
 
     .points-resources {
-        background-image: url('img/our-resources-adapt.png');
+        background-image: url('img/our-resources-adapt.webp'),url('img/our-resources-adapt.png');
         background-size: contain;
         font-size: 12px;
         min-width: 371px;
